center the content and optimise the css file

--- a/index.html
+++ b/index.html
@@ -19,19 +19,17 @@
  
  <header class="text-center col-12">
 
-    <h1 class="text-uppercase">
+    <h1>
      <strong>
-    <div style="background-color: #f2f2f2; padding: 20px;">
-        <p style="font-size: 24px; font-weight: bold; text-align: center; color: #333; margin-top: 20px;">Hello! I am <span
+    <div class="banner">
+        <p class="banner-p">Hello! I am <span
                 style="color: #66c2a5;">Hanieh</span></p>
         <p style="font-size: 16px; text-align: center; color: #999;">
 You can view my <span style="color: #66c2a5;">art page</span> by clicking on the link below:
 </p>
-<div style="justify-content: center; margin-top: 10px;">
-    <a href="https://artbyhanieh.netlify.app/"
-        style="padding: 10px 20px; background-color: #66c2a5; color: #fff; text-decoration: none; border-radius: 5px; margin-right: 10px;"><span class="viewartpage">View
-        Art Page</span></a>
-</div>
+
+    <a href="../ArtByHanieh/ArtByHanieh/index.html"class="artpagelink" >VIEW ART PAGE</a>
+
 
 
        
