fix the bug with conflicting css, link for view art page works

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
     <h1>
     
-    <div class="banner">
+    <div>
         <p class="banner-p">Hello! I am <span
                 style="color: #66c2a5;">Hanieh</span></p>
-        <p style="font-size: 16px; text-align: center; color: #999;">
-You can view my <span style="color: #66c2a5;">art page</span> by clicking on the link below:
+        <p style="font-size: 16px; text-align: center;">
+You can view my art page by clicking on the link below
 </p>
 
-    <a href="https://artbyhanieh.netlify.app/"class="artpagelink" >VIEW ART PAGE</a>
+    <a href="https://artbyhanieh.netlify.app/" class="artpagelink" >VIEW ART PAGE</a>
 
 
 
